* filetime check for -0 ?
* add tests
  - test to string format flags
  - test filetime add function
  - test copy to int functions
* add a more sophisticated day of the month check in date time values
* have API functions return 0 if value is not a valid date and time ?

Date time values:
* add non-with-index functions ?

FAT date and time
* implement individual fat_date and fat_time support ?

20160827
* worked on tests

20160220
* Worked on HFS time support

20160106
* 2016 update

20150507
* fix in POSIX timestamp for missing sign check

20150104
* 2015 update

20141226
* changes for Borland C compiler

20141018
* changes for deployment

20141014
* added tar-ustar to configure.ac to fix make dist of long filenames

20141012
* worked on utility scripts

20140920
* changes for project site move

20140402
* code clean up

20140105
* 2014 update
* updated dependencies

20130928
* updated dependencies
* added copy to int functions

20130904
* code clean up
* worked on tests

20130413
* updated dependencies
* textual changes
* maximum string size is now only returned for invalid date time values

20130317
* added .gitignore

20130305
* changes in FAT date time

20130224
* updated dependencies
* 2013 update
* removed codegear files

20121021
* added timezone indicator format flag

20120920
* updated dependencies

20120701
* updated dependencies

20120630
* updated dependencies

20120522
* worked on floatingtime
* updated project site and email address
* added set to zero of unused date and time values

20120521
* added floatingtime

20120507
* updated dependencies

20120426
* fixes for pkg-config detection of libraries

20120422
* changed byte order to int
* added systemtime support

20120418
* fixes for with index functions

20120417
* worked on string with index functions
* worked on milli and nano seconds support
* API changes

20120415
* worked on string with index functions

20120408
* updated dependencies

20120407
* updated dependencies

20120406