@@ -10,6 +10,7 @@ EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "fdatetime_test_fat_date_time", "fdatetime_test_fat_date_time\fdatetime_test_fat_date_time.vcproj", "{7617CF2D-3074-45CC-9312-61B922BB100E}"
 	ProjectSection(ProjectDependencies) = postProject
 		{1B41CCDA-9549-4EC4-A213-CF03DBC2DD80} = {1B41CCDA-9549-4EC4-A213-CF03DBC2DD80}
+		{BD3A95FA-A3DE-4B79-A889-A7E5ECA4B69C} = {BD3A95FA-A3DE-4B79-A889-A7E5ECA4B69C}
 		{20FFC4C9-F44C-45F6-A827-4819B4DF3C9F} = {20FFC4C9-F44C-45F6-A827-4819B4DF3C9F}
 	EndProjectSection
 EndProject
