@@ -19,6 +19,9 @@ Date time values:
 FAT date and time
 * implement individual fat_date and fat_time support ?
 
+20160828
+* worked on tests
+
 20160827
 * worked on tests
 
